WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310011
HashTable's deallocateTable() doesn't need to call the destructor for trivially destructible types
https://bugs.webkit.org/show_bug.cgi?id=310011
Summary
HashTable's deallocateTable() doesn't need to call the destructor for trivial...
Chris Dumez
Reported
2026-03-16 04:52:00 PDT
HashTable's deallocateTable() doesn't need to call the destructor for trivially destructible types. Use an `if constexpr` to make sure this code gets compiled out.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-16 04:53:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60686
EWS
Comment 2
2026-03-17 00:43:07 PDT
Committed
309386@main
(93262de2b325): <
https://commits.webkit.org/309386@main
> Reviewed commits have been landed. Closing PR #60686 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-17 00:44:12 PDT
<
rdar://problem/172726667
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug