HashTable's deallocateTable() doesn't need to call the destructor for trivially destructible types https://bugs.webkit.org/show_bug.cgi?id=310011

Reviewed by Ryosuke Niwa.

HashTable's deallocateTable() doesn't need to call the destructor for
trivially destructible types. Use an `if constexpr` to make sure this
code gets compiled out.

* Source/WTF/wtf/HashTable.h:
(WTF::Malloc>::deallocateTable):

Canonical link: https://commits.webkit.org/309386@main